Use ncursesw6-config to get includes for ncurses6 library 2.19.3
svn path=/trunk/ncurses-pkg/; revision=62100

--- a/libyui-ncurses-pkg/src/Makefile.am
+++ b/libyui-ncurses-pkg/src/Makefile.am
@@ -75,5 +75,5 @@ libpy2ncurses_pkg_la_SOURCES =		\
 	NCPkgStrings.cc
 
 
-INCLUDES =  -I/usr/include/ncurses6/ncursesw  -I/usr/include/ncurses6 -I$(includedir) -I$(includedir)/yui -I$(includedir)/ncurses ${ZYPP_CFLAGS}
+INCLUDES =  $(CPPFLAGS) -I$(includedir) -I$(includedir)/yui -I$(includedir)/ncurses ${ZYPP_CFLAGS}
 
