--- a/libyui-ncurses-pkg/configure.in.in
+++ b/libyui-ncurses-pkg/configure.in.in
@@ -8,10 +8,19 @@
 @YAST2-CHECKS-COMMON@
 @YAST2-CHECKS-PROGRAM@
 
+## in case of switching back to ncurses5 remember to adjust
+## configure.in.in from package yast2-ncurses as well
+AC_PATH_PROGS(NCURSES_CONFIG,ncursesw6-config ncursesw5-config,none)
+
+if test "$NCURSES_CONFIG" != none ; then
+
+CPPFLAGS="`$NCURSES_CONFIG --cflags` $CPPFLAGS"
+
+fi
+
 ## SUSE ncurses do not need the wide include
 ## but other distros do, #201705
-AC_CHECK_HEADER([ncursesw/curses.h],
-		[CPPFLAGS="$CPPFLAGS -I/usr/include/ncursesw"])
+AC_CHECK_HEADER([ncursesw/curses.h])
 
 PKG_CHECK_MODULES([ZYPP], [libzypp])
 
