Makefile.cvs - use mkdir -p (doesn't print error when the 'build' dir already exists)
svn path=/trunk/qt-pkg/; revision=65193

--- a/libyui-qt-pkg/Makefile.cvs
+++ b/libyui-qt-pkg/Makefile.cvs
@@ -7,7 +7,7 @@ LIB = $(shell y2tool get-lib)
 PREFIX = /usr
 
 configure: 
-	mkdir build ;\
+	mkdir -p build ;\
 	cd build ;\
 	cmake -DCMAKE_INSTALL_PREFIX=$(PREFIX) -DLIB=$(LIB) ..
 
