require yast2-ncurses SP2 version to prevent update/ upgrade problems
svn path=/branches/SuSE-Code-11-SP2-Branch/ncurses-pkg/; revision=65547

--- a/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
+++ b/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
@@ -10,11 +10,12 @@ Provides:	yast2-ncurses:@plugindir@/libpy2ncurses.so
 Provides:	yast2_ui_pkg
 Requires:	glibc-locale
 BuildRequires:	yast2-core-devel   >= 2.16.33
+#multi selection tree widget
 BuildRequires:	yast2-libyui-devel >= 2.21.1
 BuildRequires:  libzypp-devel >= 4.2.3
 Requires:	yast2-core >= 2.16.33
-#addItem(item, true)
-Requires:	yast2-ncurses >= 2.17.13
+#require SLES11 SP2 version 
+Requires:	yast2-ncurses >= 2.17.20
 %description
 -
 
