--- a/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
+++ b/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
@@ -13,8 +13,8 @@ BuildRequires:	yast2-core-devel   >= 2.16.33
 BuildRequires:	yast2-libyui-devel >= 2.17.14
 BuildRequires:  libzypp-devel >= 4.2.3
 Requires:	yast2-core >= 2.16.33
-#addItem(item, true)
-Requires:	yast2-ncurses >= 2.17.13
+#require version from slessp1-yast2-ncurses-pkg-ncurses patch
+Requires:	yast2-ncurses >= 2.17.18
 %description
 -
 
