--- a/libyui-qt-graph/yast2-qt-graph.spec.in
+++ b/libyui-qt-graph/yast2-qt-graph.spec.in
@@ -2,7 +2,7 @@
 
 @HEADER@
 Group:	System/YaST
-License: GPL v2 or later
+License: GPL-2.0+
 BuildRequires:	cmake libqt4-devel graphviz-devel >= 2.26.0
 BuildRequires:	yast2-devtools yast2-libyui-devel >= 2.18.7 yast2-qt-devel >= 2.18.6
 Requires:	yast2-libyui >= 2.18.7 yast2-qt >= 2.18.6
