- Applied Stano's patch to make installation history accessible   from Yast GUI - 2.21.8
svn path=/trunk/qt-pkg/; revision=66247

--- a/libyui-qt-pkg/src/CMakeLists.txt
+++ b/libyui-qt-pkg/src/CMakeLists.txt
@@ -35,6 +35,7 @@ SET(qt_yast_pkg_plugin_SRCS
     YQPkgFileListView.cc
     YQPkgFilterTab.cc
     YQPkgGenericDetailsView.cc
+    YQPkgHistoryDialog.cc
     YQPkgLangList.cc
     YQPkgList.cc
     YQPkgObjList.cc
