fixed license string
svn path=/trunk/libyui/; revision=66833

--- a/libyui/yast2-libyui.spec.in
+++ b/libyui/yast2-libyui.spec.in
@@ -3,7 +3,7 @@
 
 @HEADER@
 Group:	System/YaST
-License: GPL v2 or later
+License: GPL-2.0+
 Source1:	yast2-libyui-rpmlintrc
 
 BuildRequires:	gcc-c++
