--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -4,7 +4,7 @@
 @HEADER@
 Group:	System/YaST
 License: GPL-2.0+
-BuildRequires:	doxygen dejagnu gcc-c++ yast2-devtools 
+BuildRequires:	doxygen dejagnu gcc-c++ yast2-devtools libtool
 BuildRequires:	libxcrypt-devel blocxx-devel ncurses-devel
 
 Summary:	YaST2 - Character Based User Interface
