--- a/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
+++ b/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
@@ -4,7 +4,7 @@
 @HEADER@
 Group:	System/YaST
 License: GPL-2.0+
-BuildRequires:	doxygen dejagnu gcc-c++ yast2-core-devel yast2-devtools
+BuildRequires:	doxygen dejagnu gcc-c++ yast2-core-devel yast2-devtools libtool
 BuildRequires:	libxcrypt-devel blocxx-devel ncurses-devel yast2-ncurses-devel
 
 Summary:	YaST2 - Character Based Package Manager Frontend
