COPYING.GPL2 not needed here, COPYING file is added from devtools
svn path=/trunk/ncurses/; revision=67144

--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -47,4 +47,7 @@ rm $RPM_BUILD_ROOT/@plugindir@/libpy2ncurses.la
 %dir @includedir@
 @includedir@/ncurses/
 %doc @docdir@
-%doc COPYING.GPL2
+%doc COPYING
+
+%changelog
+
