- Fixed bnc#722325: untranslated rpm groups - Version: 2.21.3
svn path=/trunk/libyui/; revision=67643

--- a/libyui/src/Makefile.am
+++ b/libyui/src/Makefile.am
@@ -9,7 +9,7 @@ AM_CXXFLAGS =					\
 	-DPLUGINDIR=\"${plugindir}\"		\
 	-fmessage-length=0
 
-AM_CPPFLAGS = -DLOCALEDIR=\"${localedir1}\"
+AM_CPPFLAGS = -DLOCALEDIR=\"${localedir}\"
 
 lib_LTLIBRARIES = libyui.la
 
