- removed libxcrypt-devel from buildrequires
svn path=/trunk/qt-pkg/; revision=67652

--- a/libyui-qt-pkg/yast2-qt-pkg.spec.in
+++ b/libyui-qt-pkg/yast2-qt-pkg.spec.in
@@ -4,7 +4,7 @@
 @HEADER@
 Group:	System/YaST
 License:        GPL-2.0+
-BuildRequires:	docbook-xsl-stylesheets doxygen libdrm-devel libjpeg-devel libxcrypt-devel
+BuildRequires:	docbook-xsl-stylesheets doxygen libdrm-devel libjpeg-devel
 BuildRequires:  libxslt perl-XML-Writer libqt4-devel sgml-skel update-desktop-files
 
 Summary:	YaST2 - Graphical User Interface
