--- a/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
+++ b/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
@@ -5,7 +5,7 @@
 Group:	System/YaST
 License: GPL-2.0
 BuildRequires:	doxygen dejagnu gcc-c++ yast2-core-devel yast2-devtools libtool
-BuildRequires:	libxcrypt-devel blocxx-devel ncurses-devel yast2-ncurses-devel
+BuildRequires:	blocxx-devel ncurses-devel yast2-ncurses-devel
 
 Summary:	YaST2 - Character Based Package Manager Frontend
 Provides:	yast2-ncurses:@plugindir@/libpy2ncurses.so
