first step to show package classification (e.g. recommended packages), new entry 'Package Classification' added to filter
svn path=/trunk/ncurses-pkg/; revision=68024

--- a/libyui-ncurses-pkg/src/Makefile.am
+++ b/libyui-ncurses-pkg/src/Makefile.am
@@ -41,6 +41,7 @@ noinst_HEADERS =			\
 	NCPkgFilterLocale.h		\
 	NCPkgFilterRPMGroups.h		\
 	NCPkgFilterInstSummary.h	\
+	NCPkgFilterClassification.h	\
 	NCPkgStrings.h			\
 	NCZypp.h
 
@@ -72,6 +73,7 @@ libpy2ncurses_pkg_la_SOURCES =		\
 	NCPkgFilterLocale.cc		\
 	NCPkgFilterRPMGroups.cc		\
 	NCPkgFilterInstSummary.cc	\
+	NCPkgFilterClassification.cc	\
 	NCPkgStrings.cc
 
 
