- Renamed yast2-libyui to libyui and made it independed   from YaST (merged GSOC project) - Version: 2.21.5
svn path=/trunk/libyui/; revision=68153

--- a/libyui/Makefile.cvs
+++ b/libyui/Makefile.cvs
@@ -2,17 +2,16 @@
 # Makefile.cvs
 #
 
-LIB = $(shell y2tool get-lib)
-
 PREFIX = /usr
 
 configure: all
-	./configure --prefix=$(PREFIX) --libdir=$(PREFIX)/$(LIB)
+	./configure --prefix=$(PREFIX) 
 
 all:
-	y2tool y2autoconf
-	y2tool y2automake
-	autoreconf --force --install -v
+	aclocal
+	autoconf
+	autoheader
+	autoreconf --force --install
 
 install: configure
 	make
