--- a/libyui/Makefile.cvs
+++ b/libyui/Makefile.cvs
@@ -2,16 +2,17 @@
 # Makefile.cvs
 #
 
+LIB = $(shell y2tool get-lib)
+
 PREFIX = /usr
 
 configure: all
-	./configure --prefix=$(PREFIX) 
+	./configure --prefix=$(PREFIX) --libdir=$(PREFIX)/$(LIB)
 
 all:
-	aclocal
-	autoconf
-	autoheader
-	autoreconf --force --install
+	y2tool y2autoconf
+	y2tool y2automake
+	autoreconf --force --install -v
 
 install: configure
 	make
