--- a/libyui/libyui.spec.in
+++ b/libyui/libyui.spec.in
@@ -2,9 +2,9 @@
 
 
 @HEADER@
-Group:	System/YaST
-License: GPL-2.0+
-Source1:	yast2-libyui-rpmlintrc
+Group:	System/Libraries
+License: GPL-2.0
+Source1:	libyui-rpmlintrc
 
 BuildRequires:	gcc-c++
 BuildRequires:  libtool
@@ -19,26 +19,26 @@ Conflicts:	yast2-core < 2.16.38
 # libyui ImplPtr
 BuildRequires:	boost-devel
 
-Summary:	YaST2 - User Interface Engine
+Summary:	YUI - User Interface Engine
 Provides:	%{_libdir}/libyui.so.4.0.0
 
 %description
-This is the YaST2 user interface engine that provides the abstraction
+This is the YUI user interface engine that provides the abstraction
 from graphical user interfaces (Qt, Gtk) and text based user interfaces
 (ncurses).
 
-This can be used independently of YaST2 for generic (C++) applications.
+This can be used independently of YUI for generic (C++) applications.
 This package has very few dependencies.
 
 @HEADER-DEVEL@
-Summary:	YaST2 - User Interface Engine
+Summary:	YUI - User Interface Engine
 
 Requires:	glibc-devel
 Requires:	libstdc++-devel
 Requires:	boost-devel
 
 %description devel
-This is the development package for the YaST2 user interface engine
+This is the development package for the YUI user interface engine
 that provides the abstraction from graphical user interfaces (Qt, Gtk)
 and text based user interfaces (ncurses).
 
