changed include dir
svn path=/trunk/libyui/; revision=68163

--- a/libyui/libyui.pc.in
+++ b/libyui/libyui.pc.in
@@ -9,7 +9,7 @@ sysconfdir=@sysconfdir@
 sharedstatedir=@sharedstatedir@
 localstatedir=@localstatedir@
 libdir=@libdir@
-includedir=@includedir@
+includedir=${prefix}/include
 oldincludedir=@oldincludedir@
 infodir=@infodir@
 mandir=@mandir@
