corrected include dir
svn path=/trunk/libyui/; revision=68165

--- a/libyui/src/Makefile.am
+++ b/libyui/src/Makefile.am
@@ -98,7 +98,7 @@ libyui_la_SOURCES =				\
 
 
 
-pkgincludedir = $(includedir)/yui
+pkgincludedir = /usr/include/yui
 
 pkginclude_HEADERS =				\
 	YUI.h					\
