--- a/libyui/resource/template.spec.in
+++ b/libyui/resource/template.spec.in
@@ -63,14 +63,15 @@ cd build
 cmake .. \
 	-DPREFIX=%{_prefix} \
 	-DLIB_DIR=%{_lib} \
-	-DCMAKE_BUILD_TYPE=RELWITHDEBINFO \
-	-DENABLE_STATIC=ON
+	-DDOC_DIR=%{_docdir} \
+	-DCMAKE_BUILD_TYPE=RELWITHDEBINFO
+
 %else
 cmake .. \
 	-DPREFIX=%{_prefix} \
 	-DLIB_DIR=%{_lib} \
-	-DCMAKE_BUILD_TYPE=RELEASE \
-	-DENABLE_STATIC=ON
+	-DDOC_DIR=%{_docdir} \
+	-DCMAKE_BUILD_TYPE=RELEASE
 %endif
 
 make %{?jobs:-j%jobs}
