--- a/libyui/resource/config.h.in
+++ b/libyui/resource/config.h.in
@@ -57,7 +57,7 @@
 /-*/
 
 #define LOCALEDIR	"@PREFIX@/@DATAROOTDIR@/locale"
-#define PLUGINDIR	"@PREFIX@/@FULL_PLUGIN_DIR@"
+#define PLUGINDIR	"@PREFIX@/@LIB_DIR@@BASELIB@"
 #define THEMEDIR	"@PREFIX@/@THEME_DIR@"
-#define PLUGIN_PREFIX	"lib@baselib@-"
-#define PLUGIN_SUFFIX	".so.@@varpfx@_SONAME_MAJOR@"
+#define PLUGIN_PREFIX	"lib@BASELIB@-"
+#define PLUGIN_SUFFIX	".so"
