update of buildtools

--- a/libyui/examples/CMakeLists.txt
+++ b/libyui/examples/CMakeLists.txt
@@ -1,23 +1,14 @@
 INCLUDE_DIRECTORIES( "${CMAKE_CURRENT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/src" "${CMAKE_INCLUDE_PATH}" )
 
-SET( EXAMPLES_LIST
-  ComboBox1
-  ComboBox1-editable
-  HelloWorld
-  SelectionBox1
-  SelectionBox2
-  SelectionBox3-many-items
-  Table-many-items
-)
-
 FOREACH( EXAMPLE ${EXAMPLES_LIST} )
   IF( ENABLE_EXAMPLES )
-    ADD_EXECUTABLE ( ${EXAMPLE} ${EXAMPLE}.cc )
-    TARGET_LINK_LIBRARIES( ${EXAMPLE} ${TARGETLIB} )
+    GET_FILENAME_COMPONENT( EXAMPLE_EXEC "${EXAMPLE}" NAME_WE )
+    ADD_EXECUTABLE ( ${EXAMPLE_EXEC} "${EXAMPLE}" )
+    TARGET_LINK_LIBRARIES( ${EXAMPLE_EXEC} ${BASELIB} )
   ENDIF( ENABLE_EXAMPLES )
-
-  INSTALL(
-    FILES "${EXAMPLE}.cc"
-    DESTINATION "${INSTALL_DOC_DIR_PREFIX}/examples"
-  )
 ENDFOREACH( EXAMPLE ${EXAMPLES_LIST} )
+
+INSTALL(
+  FILES "${EXAMPLES_LIST}"
+  DESTINATION "${INSTALL_DOC_DIR_PREFIX}/examples"
+)
