--- a/libyui/resource/config.h.in
+++ b/libyui/resource/config.h.in
@@ -57,7 +57,7 @@
 /-*/
 
 #define LOCALEDIR	"@PREFIX@/@DATAROOTDIR@/locale"
-#define PLUGINDIR	"@PREFIX@/@LIB_DIR@@BASELIB@"
+#define PLUGINDIR	"@PREFIX@/@LIB_DIR_PLAIN@/@BASELIB@"
 #define THEMEDIR	"@PREFIX@/@THEME_DIR@"
 #define PLUGIN_PREFIX	"lib@BASELIB@-"
-#define PLUGIN_SUFFIX	".so"
+#define PLUGIN_SUFFIX	".so.@SONAME_MAJOR@"
