update of buildtools

--- a/libyui/examples/CMakeLists.txt
+++ b/libyui/examples/CMakeLists.txt
@@ -9,6 +9,6 @@ FOREACH( EXAMPLE ${EXAMPLES_LIST} )
 ENDFOREACH( EXAMPLE ${EXAMPLES_LIST} )
 
 INSTALL(
-  FILES "${EXAMPLES_LIST}"
+  FILES ${EXAMPLES_LIST}
   DESTINATION "${INSTALL_DOC_DIR_PREFIX}/examples"
 )
