--- a/libyui/src/CMakeLists.txt
+++ b/libyui/src/CMakeLists.txt
@@ -32,7 +32,7 @@ INSTALL(
 )
 
 INSTALL(
-  FILES "${${TARGETLIB}_HEADERS}"
+  FILES ${${TARGETLIB}_HEADERS}
   DESTINATION "${INSTALL_INCLUDE_DIR_PREFIX}"
 )
 
