--- a/libyui/resource/Doxyfile.in
+++ b/libyui/resource/Doxyfile.in
@@ -248,7 +248,7 @@ SKIP_FUNCTION_MACROS   = YES
 # Configuration::additions related to external references
 #---------------------------------------------------------------------------
 TAGFILES               =
-GENERATE_TAGFILE       = @PROJECT_BINARY_DIR@/doc/@PROJECTNAME@.tag
+GENERATE_TAGFILE       = @PROJECT_BINARY_DIR@/doc/html/@PROJECTNAME@.tag
 ALLEXTERNALS           = NO
 EXTERNAL_GROUPS        = YES
 PERL_PATH              = /usr/bin/perl
