--- a/libyui/resource/template.spec.in
+++ b/libyui/resource/template.spec.in
@@ -11,11 +11,11 @@ Source:		@PROJECTNAME@-%{version}.tar.bz2
 Group:		System/Libraries
 
 @BuildRequires@
-URL:		@SPEC_URL@
-Summary:	@SPEC_SUMMARY@
+URL:		@SPEC_Url@
+Summary:	@SPEC_Summary@
 
 %description
-@SPEC_DESCRIPTION@
+@SPEC_Description@
 
 %package -n @PROJECTNAME@@SONAME_MAJOR@
 
@@ -24,11 +24,11 @@ Group:		System/Libraries
 @Conflicts@
 @Provides@
 @Obsoletes@
-URL:		@SPEC_URL@
-Summary:	@PROJECTNAME_UC@ - @SPEC_SUMMARY@
+URL:		@SPEC_Url@
+Summary:	@PROJECTNAME_UC@ - @SPEC_Summary@
 
 %description -n @PROJECTNAME@@SONAME_MAJOR@
-@SPEC_DESCRIPTION@
+@SPEC_Description@
 
 
 %package devel
@@ -37,11 +37,11 @@ Group:		Development/Languages/C and C++
 
 @DEVEL_Requires@
 @DEVEL_Provides@
-URL:		@SPEC_URL@
+URL:		@SPEC_Url@
 Summary:	@PROJECTNAME_UC@ header files
 
 %description devel
-@SPEC_DESCRIPTION@
+@SPEC_Description@
 
 This can be used independently of YaST for generic (C++) applications.
 This package has very few dependencies.
@@ -93,7 +93,7 @@ rm -rf "$RPM_BUILD_ROOT"
 %files -n @PROJECTNAME@@SONAME_MAJOR@
 %defattr(-,root,root)
 
-%{_libdir}@SPEC_LIBDIR@/lib*.so.*
+%{_libdir}@SPEC_Libdir@/lib*.so.*
 
 %files devel
 %defattr(-,root,root)
