--- a/libyui/resource/template.spec.in
+++ b/libyui/resource/template.spec.in
@@ -100,6 +100,6 @@ rm -rf "$RPM_BUILD_ROOT"
 %{_prefix}/include/yui
 %{_libdir}/pkgconfig/@PROJECTNAME@.pc
 %{_libdir}/cmake/@PROJECTNAME@
-%doc %{_docdir}/@PROJECTNAME_UC@@SONAME_MAJOR@/doc
+%doc %{_docdir}/@PROJECTNAME@@SONAME_MAJOR@
 
 %changelog
