--- a/libyui/resource/Doxyfile.in
+++ b/libyui/resource/Doxyfile.in
@@ -7,7 +7,7 @@ DOXYFILE_ENCODING      = UTF-8
 PROJECT_NAME           = @PROJECTNAME@
 PROJECT_NUMBER         = @@varpfx@_VERSION@
 PROJECT_BRIEF          =
-PROJECT_LOGO           = @PROJECT_SOURCE_DIR@/resource/libyui.png
+PROJECT_LOGO           =
 OUTPUT_DIRECTORY       = @PROJECT_BINARY_DIR@/doc
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
