update from buildtools

--- a/libyui/resource/template.spec.in
+++ b/libyui/resource/template.spec.in
@@ -90,12 +90,13 @@ rm -rf "$RPM_BUILD_ROOT"
 
 %files -n @PROJECTNAME@@SONAME_MAJOR@
 %defattr(-,root,root)
-
+%dir %{_libdir}/@BASELIB@
+%dir %{_libdir}@SPEC_Libdir@
 %{_libdir}@SPEC_Libdir@/lib*.so.*
 
 %files devel
 %defattr(-,root,root)
-%dir %{_libdir}/@BASELIB@
+%dir %{_libdir}@SPEC_LIBDIR@
 %{_libdir}@SPEC_LIBDIR@/lib*.so
 %{_prefix}/include/yui
 %{_libdir}/pkgconfig/@PROJECTNAME@.pc
