--- a/libyui/resource/template.spec.in
+++ b/libyui/resource/template.spec.in
@@ -93,6 +93,7 @@ rm -rf "$RPM_BUILD_ROOT"
 %dir %{_libdir}/@BASELIB@
 %dir %{_libdir}@SPEC_Libdir@
 %{_libdir}@SPEC_Libdir@/lib*.so.*
+@SPEC_Docs@
 
 %files devel
 %defattr(-,root,root)
@@ -101,6 +102,6 @@ rm -rf "$RPM_BUILD_ROOT"
 %{_prefix}/include/yui
 %{_libdir}/pkgconfig/@PROJECTNAME@.pc
 %{_libdir}/cmake/@PROJECTNAME@
-%doc %{_docdir}/@PROJECTNAME@@SONAME_MAJOR@
+@SPEC_DEVEL_Docs@
 
 %changelog
