--- a/libyui-ncurses/resource/template.spec.in
+++ b/libyui-ncurses/resource/template.spec.in
@@ -90,16 +90,17 @@ rm -rf "$RPM_BUILD_ROOT"
 
 %files -n @PROJECTNAME@@SONAME_MAJOR@
 %defattr(-,root,root)
-
+%dir %{_libdir}@SPEC_Libdir@
 %{_libdir}@SPEC_Libdir@/lib*.so.*
+@SPEC_Docs@
 
 %files devel
 %defattr(-,root,root)
-%dir %{_libdir}/@BASELIB@
+%dir %{_libdir}@SPEC_LIBDIR@
 %{_libdir}@SPEC_LIBDIR@/lib*.so
 %{_prefix}/include/yui
 %{_libdir}/pkgconfig/@PROJECTNAME@.pc
 %{_libdir}/cmake/@PROJECTNAME@
-%doc %{_docdir}/@PROJECTNAME@@SONAME_MAJOR@
+@SPEC_DEVEL_Docs@
 
 %changelog
