update from buildtools

--- a/libyui/resource/template.spec.in
+++ b/libyui/resource/template.spec.in
@@ -80,7 +80,7 @@ make %{?jobs:-j%jobs}
 cd build
 make install DESTDIR="$RPM_BUILD_ROOT"
 install -m0755 -d $RPM_BUILD_ROOT/%{_docdir}/@PROJECTNAME@@SONAME_MAJOR@/
-install -m0644 ../COPYING $RPM_BUILD_ROOT/%{_docdir}/@PROJECTNAME@@SONAME_MAJOR@/
+install -m0644 ../COPYING* $RPM_BUILD_ROOT/%{_docdir}/@PROJECTNAME@@SONAME_MAJOR@/
 
 %clean
 rm -rf "$RPM_BUILD_ROOT"
