--- a/libyui-ncurses/resource/template.spec.in
+++ b/libyui-ncurses/resource/template.spec.in
@@ -79,6 +79,8 @@ make %{?jobs:-j%jobs}
 %install
 cd build
 make install DESTDIR="$RPM_BUILD_ROOT"
+install -m0755 -d $RPM_BUILD_ROOT/%{_docdir}/@PROJECTNAME@@SONAME_MAJOR@/
+install -m0644 ../COPYING* $RPM_BUILD_ROOT/%{_docdir}/@PROJECTNAME@@SONAME_MAJOR@/
 
 %clean
 rm -rf "$RPM_BUILD_ROOT"
@@ -89,7 +91,7 @@ rm -rf "$RPM_BUILD_ROOT"
 
 %files -n @PROJECTNAME@@SONAME_MAJOR@
 %defattr(-,root,root)
-%dir %{_libdir}@SPEC_Libdir@
+@SPEC_Owndir@
 %{_libdir}@SPEC_Libdir@/lib*.so.*
 @SPEC_Docs@
 
