--- a/libyui-ncurses/resource/template.spec.in
+++ b/libyui-ncurses/resource/template.spec.in
@@ -97,7 +97,7 @@ rm -rf "$RPM_BUILD_ROOT"
 
 %files devel
 %defattr(-,root,root)
-%dir %{_libdir}@SPEC_Libdir@
+@SPEC_Owndir@
 %{_libdir}@SPEC_Libdir@/lib*.so
 %{_prefix}/include/yui
 %{_libdir}/pkgconfig/@PROJECTNAME@.pc
