Move to libyui buildtools structure

--- a/libyui-qt-pkg/CMakeLists.txt
+++ b/libyui-qt-pkg/CMakeLists.txt
@@ -1,26 +1,31 @@
-PROJECT(yast2-qt-pkg)
-SET( CMAKE_MODULE_PATH "${CMAKE_INSTALL_PREFIX}/share/cmake/Modules" ${CMAKE_MODULE_PATH} )
+CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
 
-SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Woverloaded-virtual -Wno-deprecated" )
-SET( CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -g -Wall" )
-set( CMAKE_CXX_FLAGS_RELEASE   "${CMAKE_CXX_FLAGS_RELEASE} -DQT_NO_DEBUG -DNDEBUG")
+INCLUDE( "${CMAKE_CURRENT_SOURCE_DIR}/macros.cmake" )
+INCLUDE( "${CMAKE_CURRENT_SOURCE_DIR}/PROJECTINFO.cmake" )
+INCLUDE( "${CMAKE_CURRENT_SOURCE_DIR}/RPMINFO.cmake" )
+INCLUDE( "${CMAKE_CURRENT_SOURCE_DIR}/VERSION.cmake" )
 
-SET( RPMNAME "yast2-qt-pkg" )
+INITIALIZE()
 
-FIND_PACKAGE(Qt4 REQUIRED)
-FIND_PACKAGE(Yast)
-FIND_PACKAGE(Libyui REQUIRED)
-FIND_PACKAGE(Zypp REQUIRED)
-INCLUDE(YastCommon)
+PROJECT( "${PROJECTNAME}" )
 
-SET(Y2QT_ICONDIR ${CMAKE_INSTALL_PREFIX}/share/YaST2/theme/current)
-SET(Y2QT_LOCALEDIR ${CMAKE_INSTALL_PREFIX}/share/locale)
-SET(Y2QT_THEMEDIR ${CMAKE_INSTALL_PREFIX}/share/YaST2/theme)
+INCLUDE( "${CMAKE_CURRENT_SOURCE_DIR}/SOURCECONF.cmake" )
 
-GENERATE_PACKAGING(${RPMNAME} ${VERSION})
+SET_OPTIONS()
+SET_ENVIRONMENT()
+SET_BUILD_FLAGS()
+SET_AUTODOCS()
 
-IF( YPKG_QT_CONFIRM_UNSUPPORTED_PACKAGES )
-  ADD_DEFINITIONS( -DYPKG_QT_CONFIRM_UNSUPPORTED_PACKAGES )
-ENDIF( YPKG_QT_CONFIRM_UNSUPPORTED_PACKAGES )
+IF( NOT DOCS_ONLY )
+  FIND_LIB_DEPENDENCIES()
+  FIND_LINKER_LIBS()
+  CHECK_PREFIX()
+  SET_SUBDIRS()
+  GEN_EXPORTS()
+  GEN_FILES()
+  PREP_SPEC_FILES()
+  SET_INSTALL_TARGET()
+  PREP_OBS_TARBALL()
+ENDIF( NOT DOCS_ONLY )
 
-ADD_SUBDIRECTORY(src)
+SUMMARY()
