--- a/libyui-ncurses/resource/template.spec.in
+++ b/libyui-ncurses/resource/template.spec.in
@@ -21,9 +21,10 @@ Summary:	@SPEC_Summary@
 
 Group:		System/Libraries
 
-@Conflicts@
+@Requires@
 @Provides@
 @Obsoletes@
+@Conflicts@
 URL:		@SPEC_Url@
 Summary:	@PROJECTNAME_UC@ - @SPEC_Summary@
 
