update from buildtools

--- a/libyui/examples/CMakeLists.txt
+++ b/libyui/examples/CMakeLists.txt
@@ -1,4 +1,4 @@
-INCLUDE_DIRECTORIES( "${CMAKE_CURRENT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/src" "${CMAKE_INCLUDE_PATH}" )
+INCLUDE_DIRECTORIES( "${CMAKE_CURRENT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/src" ${CMAKE_INCLUDE_PATH} )
 
 FOREACH( EXAMPLE ${EXAMPLES_LIST} )
   IF( ENABLE_EXAMPLES )
