--- a/libyui/resource/template.spec.in
+++ b/libyui/resource/template.spec.in
@@ -1,5 +1,5 @@
 #
-# spec file for package @PROJECTNAME@ (Version @@varpfx@_VERSION@)
+# spec file for package @PROJECTNAME@ (Version @VERSION@)
 #
 # norootforbuild
 
