--- a/libyui-ncurses/resource/template-doc.spec.in
+++ b/libyui-ncurses/resource/template-doc.spec.in
@@ -1,5 +1,5 @@
 #
-# spec file for package @PROJECTNAME@ (Version @@varpfx@_VERSION@)
+# spec file for package @PROJECTNAME@ (Version @VERSION@)
 #
 # norootforbuild
 
