--- a/libyui-ncurses/src/CMakeLists.txt
+++ b/libyui-ncurses/src/CMakeLists.txt
@@ -1,4 +1,17 @@
-INCLUDE_DIRECTORIES( "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}" "${CMAKE_INCLUDE_PATH}" )
+INCLUDE_DIRECTORIES( "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}" ${CMAKE_INCLUDE_PATH} )
+
+IF( QT_FOUND )
+
+  ADD_DEFINITIONS(
+    -DQT_LOCALEDIR="${QT_TRANSLATIONS_DIR}"
+    -DQTLIBDIR="${LIB_INSTALL_DIR}"
+    -DLANG_FONTS_FILE="${YUIQT_LANG_FONTS_FILE}"
+   )
+
+  QT4_AUTOMOC( ${${TARGETLIB}_SOURCES} )
+  QT4_WRAP_UI( ${TARGETLIB}_SOURCES "${${TARGETLIB}_WRAP_UI}" )
+
+ENDIF( QT_FOUND )
 
 IF( NOT PLUGINNAME )
   SET( ${TARGETLIB}_HEADERS
