update from buildtools

--- a/libyui/src/CMakeLists.txt
+++ b/libyui/src/CMakeLists.txt
@@ -4,8 +4,7 @@ IF( QT_FOUND )
 
   ADD_DEFINITIONS(
     -DQT_LOCALEDIR="${QT_TRANSLATIONS_DIR}"
-    -DQTLIBDIR="${LIB_INSTALL_DIR}"
-    -DLANG_FONTS_FILE="${YUIQT_LANG_FONTS_FILE}"
+    -DQTLIBDIR="${QT_LIBRARY_DIR}"
    )
 
   QT4_AUTOMOC( ${${TARGETLIB}_SOURCES} )
