--- a/libyui/resource/config.h.in
+++ b/libyui/resource/config.h.in
@@ -1,63 +1,41 @@
-/*************************************************************************************************************
+/*
+  Copyright (c) 2012 Björn Esser
 
- Copyright (C) 2000 - 2010 Novell, Inc.   All Rights Reserved.
+  Permission is hereby granted, free of charge, to any person obtaining
+  a copy of this software and associated documentation files (the
+  "Software"), to deal in the Software without restriction, including
+  without limitation the rights to use, copy, modify, merge, publish,
+  distribute, sublicense, and/or sell
+  copies of the Software, and to permit persons to whom the Software is
+  furnished to do so, subject to the following conditions:
 
- This program is free software; you can redistribute it and/or modify it under the terms of the GNU General
- Public License as published by the Free Software Foundation; either version 2 of the License, or (at your
- option) any later version.
+  The above copyright notice and this permission notice shall be
+  included in all copies or substantial portions of the Software.
 
- This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
- implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
- for more details.
+  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT
+  SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
+  DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
+  OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR
+  THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+*/
 
- You should have received a copy of the GNU General Public License along with this program; if not, write to
- the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
-
-*************************************************************************************************************/
-
-
-
- /////////////////////////////////////////////////////////////////////////////////////////////////////////////
- /////////////////////////////////////////////////////////////////////////////////////////////////////////////
- ////                                                                                                     ////
- ////                                                                                                     ////
- ////                                                                                                     ////
- ////   __/\\\\\\_____________/\\\__________/\\\________/\\\___/\\\________/\\\___/\\\\\\\\\\\_           ////
- ////    _\////\\\____________\/\\\_________\///\\\____/\\\/___\/\\\_______\/\\\__\/////\\\///__          ////
- ////     ____\/\\\______/\\\__\/\\\___________\///\\\/\\\/_____\/\\\_______\/\\\______\/\\\_____         ////
- ////      ____\/\\\_____\///___\/\\\_____________\///\\\/_______\/\\\_______\/\\\______\/\\\_____        ////
- ////       ____\/\\\______/\\\__\/\\\\\\\\\_________\/\\\________\/\\\_______\/\\\______\/\\\_____       ////
- ////        ____\/\\\_____\/\\\__\/\\\////\\\________\/\\\________\/\\\_______\/\\\______\/\\\_____      ////
- ////         ____\/\\\_____\/\\\__\/\\\__\/\\\________\/\\\________\//\\\______/\\\_______\/\\\_____     ////
- ////          __/\\\\\\\\\__\/\\\__\/\\\\\\\\\_________\/\\\_________\///\\\\\\\\\/_____/\\\\\\\\\\\_    ////
- ////           _\/////////___\///___\/////////__________\///____________\/////////______\///////////__   ////
- ////                                                                                                     ////
- ////                                                                                                     ////
- ////                 widget abstraction library providing Qt, GTK and ncurses frontends                  ////
- ////                                                                                                     ////
- ////                                   3 UIs for the price of one code                                   ////
- ////                                                                                                     ////
- ////                                       ***  core library  ***                                        ////
- ////                                                                                                     ////
- ////                                                                                                     ////
- ////                                                                                                     ////
- ////                                                                              (C) SUSE Linux GmbH    ////
- ////                                                                                                     ////
- ////                                                              libYUI-AsciiArt (C) 2012 Björn Esser   ////
- ////                                                                                                     ////
- /////////////////////////////////////////////////////////////////////////////////////////////////////////////
- /////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 /*-/
 
-  File:  config.h
+  File:   @PROJECTNAME_UC@_config.h
 
-  Author: Björn Esser <bjoern.esser@gmail.com>
+  Author: autogenerated by CMake
 
 /-*/
+
 #ifndef @PROJECTNAME_UC@_CONFIG_H
 #define @PROJECTNAME_UC@_CONFIG_H
 
+#define DATADIR		"@PREFIX@/@FULL_DATA_DIR@"
+#define HELP_ICONS_DIR	"@PREFIX@/@FULL_DATA_DIR@/images"
+#define LANG_FONTS_FILE	"@PREFIX@/@FULL_DATA_DIR@/data/lang_fonts"
 #define LOCALEDIR	"@PREFIX@/@DATAROOTDIR@/locale"
 #define PLUGINDIR	"@PREFIX@/@LIB_DIR_PLAIN@/@BASELIB@"
 #define THEMEDIR	"@PREFIX@/@THEME_DIR@"
