last update from buildtools; they'll be in the -devel-pkg and developed from here in future

--- a/libyui/resource/config.h.in
+++ b/libyui/resource/config.h.in
@@ -34,6 +34,7 @@
 #define @PROJECTNAME_UC@_CONFIG_H
 
 #define DATADIR		"@PREFIX@/@FULL_DATA_DIR@"
+#define DATAROOTDIR	"@PREFIX@/@DATAROOTDIR@"
 #define HELP_ICONS_DIR	"@PREFIX@/@FULL_DATA_DIR@/images"
 #define LANG_FONTS_FILE	"@PREFIX@/@FULL_DATA_DIR@/data/lang_fonts"
 #define LOCALEDIR	"@PREFIX@/@DATAROOTDIR@/locale"
