--- a/libyui/buildtools/template.pc.in
+++ b/libyui/buildtools/template.pc.in
@@ -15,6 +15,6 @@ localedir=${datarootdir}/locale
 
 Name: @PROJECTNAME@
 Version: @VERSION@
-Description: @PROJECTNAME@ - @SPEC_SUMMARY@
+Description: @PROJECTNAME@ - @SUMMARY@
 Libs: -l@TARGETLIB@
 Cflags: -I${includedir}
