--- a/libyui/libyui.spec.in
+++ b/libyui/libyui.spec.in
@@ -10,46 +10,53 @@ License:	GPL-2.0
 Source:		@PROJECTNAME@-%{version}.tar.bz2
 Group:		System/Libraries
 
-@BuildRequires@
-URL:		@SPEC_Url@
-Summary:	@SPEC_Summary@
+BuildRequires:	boost-devel
+BuildRequires:	cmake >= 2.8
+BuildRequires:	gcc-c++
+BuildRequires:	pkg-config
+
+URL:		@URL@
+Summary:	@SUMMARY@
 
 %description
-@SPEC_Description@
+@DESCRIPTION@
 
 %package -n @PROJECTNAME@@SONAME_MAJOR@
 
 Group:		System/Libraries
 
-@Requires@
-@Provides@
-@Obsoletes@
-@Conflicts@
-URL:		@SPEC_Url@
-Summary:	@PROJECTNAME_UC@ - @SPEC_Summary@
+Provides:	libyui = %{version}
+Provides:	yast2-libyui = 2.21.5
+Obsoletes:	yast2-libyui < 2.21.5
+
+URL:		@URL@
+Summary:	@PROJECTNAME_UC@ - @SUMMARY@
 
 %description -n @PROJECTNAME@@SONAME_MAJOR@
-@SPEC_Description@
+@DESCRIPTION@
 
 
 %package devel
 
 Group:		Development/Languages/C and C++
 
-@DEVEL_Requires@
-@DEVEL_Provides@
-URL:		@SPEC_Url@
+Requires:	@PROJECTNAME@@SONAME_MAJOR@ = %{version}
+Requires:	glibc-devel
+Requires:	libstdc++-devel
+Requires:	boost-devel
+
+URL:		@URL@
 Summary:	@PROJECTNAME_UC@ header files
 
 %description devel
-@SPEC_Description@
+@DESCRIPTION@
 
 This can be used independently of YaST for generic (C++) applications.
 This package has very few dependencies.
 
 
 %prep
-%setup -n @PROJECTNAME@-%{version}
+%setup -q -n @PROJECTNAME@-%{version}
 
 
 %build
@@ -81,6 +88,7 @@ make %{?jobs:-j%jobs}
 cd build
 make install DESTDIR="$RPM_BUILD_ROOT"
 install -m0755 -d $RPM_BUILD_ROOT/%{_docdir}/@PROJECTNAME@@SONAME_MAJOR@/
+install -m0755 -d $RPM_BUILD_ROOT/%{_libdir}/@BASELIB@
 install -m0644 ../COPYING* $RPM_BUILD_ROOT/%{_docdir}/@PROJECTNAME@@SONAME_MAJOR@/
 
 %clean
@@ -92,17 +100,20 @@ rm -rf "$RPM_BUILD_ROOT"
 
 %files -n @PROJECTNAME@@SONAME_MAJOR@
 %defattr(-,root,root)
-@SPEC_Owndir@
-%{_libdir}@SPEC_Libdir@/lib*.so.*
-@SPEC_Docs@
+%dir %{_libdir}/@BASELIB@
+%dir %{_datadir}/@PROJECTNAME@
+%{_libdir}/lib*.so.*
+%doc %dir %{_docdir}/@PROJECTNAME@@SONAME_MAJOR@
+%doc %{_docdir}/@PROJECTNAME@@SONAME_MAJOR@/COPYING*
 
 %files devel
 %defattr(-,root,root)
-@SPEC_Owndir@
-%{_libdir}@SPEC_Libdir@/lib*.so
+%dir %{_docdir}/@PROJECTNAME@@SONAME_MAJOR@
+%{_libdir}/lib*.so
 %{_prefix}/include/yui
 %{_libdir}/pkgconfig/@PROJECTNAME@.pc
 %{_libdir}/cmake/@PROJECTNAME@
-@SPEC_DEVEL_Docs@
+%{_datadir}/@PROJECTNAME@/buildtools
+%doc %{_docdir}/@PROJECTNAME@@SONAME_MAJOR@/examples
 
 %changelog
