place common build-tasks in LibyuiCommon, too.

--- a/libyui/examples/CMakeLists.txt
+++ b/libyui/examples/CMakeLists.txt
@@ -1,14 +1,1 @@
-INCLUDE_DIRECTORIES( "${CMAKE_CURRENT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/src" ${CMAKE_INCLUDE_PATH} )
-
-FOREACH( EXAMPLE ${EXAMPLES_LIST} )
-  IF( ENABLE_EXAMPLES )
-    GET_FILENAME_COMPONENT( EXAMPLE_EXEC "${EXAMPLE}" NAME_WE )
-    ADD_EXECUTABLE ( ${EXAMPLE_EXEC} "${EXAMPLE}" )
-    TARGET_LINK_LIBRARIES( ${EXAMPLE_EXEC} ${BASELIB} )
-  ENDIF( ENABLE_EXAMPLES )
-ENDFOREACH( EXAMPLE ${EXAMPLES_LIST} )
-
-INSTALL(
-  FILES ${EXAMPLES_LIST}
-  DESTINATION "${INSTALL_DOC_DIR_PREFIX}/examples"
-)
+PROCESS_EXAMPLES()
