added high contrast schemes "highcontrast" and "inverted"

--- a/libyui-ncurses/src/Makefile.am
+++ b/libyui-ncurses/src/Makefile.am
@@ -93,7 +93,8 @@ pkginclude_HEADERS = 		\
 	NCAskForFile.h		\
 	NCstyle.braille.h NCstyle.mono.h	\
 	NCstyle.linux.h NCstyle.xterm.h		\
-	NCstyle.rxvt.h
+	NCstyle.rxvt.h NCstyle.highcontrast.h	\
+	NCstyle.inverted.h
 
 install-pkgincludeHEADERS: $(pkgi/nclude_HEADERS)
 	@$(NORMAL_INSTALL)
