Fixes two issues with the buildsystem:
The "magic" engine, assumes FindFoo defines Foo_LIBRARIES, Foo_*, etc.
But in cmake the convention is with uppercase, except for a bunch of
modules which don't follow this.

LIB_DEPS was added to LIB_LINKER, which is wrong, as LIB_DEPS are full
path to .so names found by find_library, and LIB_LINKER are library
names only, the "check if exists" fails then. Add manually LIB_DEPS
using target_link_libraries later.

--- a/libyui/buildtools/Config.cmake.in
+++ b/libyui/buildtools/Config.cmake.in
@@ -1,33 +1,33 @@
 #  Config file for @PROJECTNAME@
 #  It defines the following variables
-#  @PROJECTNAME_UC@_INCLUDE_DIRS - include directories for @PROJECTNAME@
-#  @PROJECTNAME_UC@_LIBRARIES    - libraries to link against
-#  @PROJECTNAME_UC@_PREFIX       - prefix where @PROJECTNAME@ is installed
-#  @PROJECTNAME_UC@_SONAME       - soname of @PROJECTNAME@
-#  @PROJECTNAME_UC@_SONAME_MAJOR - soname of @PROJECTNAME@
-#  @PROJECTNAME_UC@_SONAME_MINOR - soname of @PROJECTNAME@
-#  @PROJECTNAME_UC@_SONAME_PATCH - soname of @PROJECTNAME@
+#  @PROJECTNAME_UC_UPPER@_INCLUDE_DIRS - include directories for @PROJECTNAME@
+#  @PROJECTNAME_UC_UPPER@_LIBRARIES    - libraries to link against
+#  @PROJECTNAME_UC_UPPER@_PREFIX       - prefix where @PROJECTNAME@ is installed
+#  @PROJECTNAME_UC_UPPER@_SONAME       - soname of @PROJECTNAME@
+#  @PROJECTNAME_UC_UPPER@_SONAME_MAJOR - soname of @PROJECTNAME@
+#  @PROJECTNAME_UC_UPPER@_SONAME_MINOR - soname of @PROJECTNAME@
+#  @PROJECTNAME_UC_UPPER@_SONAME_PATCH - soname of @PROJECTNAME@
 
 # Export the SONAME for use by plugins
-SET( @PROJECTNAME_UC@_SONAME "@SONAME@" )
-SET( @PROJECTNAME_UC@_SONAME_MAJOR "@SONAME_MAJOR@" )
-SET( @PROJECTNAME_UC@_SONAME_MINOR "@SONAME_MINOR@" )
-SET( @PROJECTNAME_UC@_SONAME_PATCH "@SONAME_PATCH@" )
+SET( @PROJECTNAME_UC_UPPER@_SONAME "@SONAME@" )
+SET( @PROJECTNAME_UC_UPPER@_SONAME_MAJOR "@SONAME_MAJOR@" )
+SET( @PROJECTNAME_UC_UPPER@_SONAME_MINOR "@SONAME_MINOR@" )
+SET( @PROJECTNAME_UC_UPPER@_SONAME_PATCH "@SONAME_PATCH@" )
 
 # Compute paths
-SET( @PROJECTNAME_UC@_PREFIX "@PREFIX@" )
-GET_FILENAME_COMPONENT( @PROJECTNAME_UC@_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH )
-IF( EXISTS "${@PROJECTNAME_UC@_CMAKE_DIR}/CMakeCache.txt" )
+SET( @PROJECTNAME_UC_UPPER@_PREFIX "@PREFIX@" )
+GET_FILENAME_COMPONENT( @PROJECTNAME_UC_UPPER@_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH )
+IF( EXISTS "${@PROJECTNAME_UC_UPPER@_CMAKE_DIR}/CMakeCache.txt" )
    # In build tree
-   INCLUDE( "${@PROJECTNAME_UC@_CMAKE_DIR}/@PROJECTNAME_UC@BuildTreeSettings.cmake" )
+   INCLUDE( "${@PROJECTNAME_UC_UPPER@_CMAKE_DIR}/@PROJECTNAME_UC@BuildTreeSettings.cmake" )
 ELSE()
-   SET( @PROJECTNAME_UC@_INCLUDE_DIRS "@INSTALL_INCLUDE_DIR_PREFIX@" )
+   SET( @PROJECTNAME_UC_UPPER@_INCLUDE_DIRS "@INSTALL_INCLUDE_DIR_PREFIX@" )
 ENDIF()
 
 # Our library dependencies (contains definitions for IMPORTED targets)
-INCLUDE( "${@PROJECTNAME_UC@_CMAKE_DIR}/@PROJECTNAME_UC@LibraryDepends.cmake" )
+INCLUDE( "${@PROJECTNAME_UC_UPPER@_CMAKE_DIR}/@PROJECTNAME_UC@LibraryDepends.cmake" )
 
 # These are IMPORTED targets created by @PROJECTNAME_UC@LibraryDepends.cmake
-SET( @PROJECTNAME_UC@_LIBRARIES @TARGETLIB@ )
+SET( @PROJECTNAME_UC_UPPER@_LIBRARIES @TARGETLIB@ )
 
 MESSAGE( STATUS "Found @PROJECTNAME_UC@: ${IMPORTED_LOCATION_RELEASE} (Version: @VERSION@)" )
