Find ncurses the cmake way, this is, using find_library. We need to find ncurses6 which is in /usr/lib{64}/ncurses6, so -lncurses does not work. This is what was making ruby-ui display garbage.
Note that setting -DNCURSES_INTERNALS=1 is in libyui buildtools for now,
as setting any definition here does not work. Just as GNU extensions are
enabled for gtk in the buildtools, which is also wrong, but we need to
fix the buildsystem for that.

--- a/libyui-ncurses/CMakeLists.txt
+++ b/libyui-ncurses/CMakeLists.txt
@@ -1,4 +1,5 @@
 CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
+SET( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules" "${CMAKE_MODULE_PATH}" )
 
 INCLUDE( "${CMAKE_CURRENT_SOURCE_DIR}/PROJECTINFO.cmake" )
 
