fix -devel package requirements

--- a/libyui-ncurses/libyui-ncurses.spec.in
+++ b/libyui-ncurses/libyui-ncurses.spec.in
@@ -14,7 +14,9 @@ BuildRequires:	boost-devel
 BuildRequires:	cmake >= 2.8
 BuildRequires:	gcc-c++
 BuildRequires:	pkg-config
-BuildRequires:	libyui-devel
+
+%define libyui-devel_version "libyui-devel >= 2.42.0"
+BuildRequires:	%{libyui-devel_version}
 BuildRequires:	ncurses-devel
 
 URL:		@URL@
@@ -46,7 +48,7 @@ Requires:	@PROJECTNAME@@SONAME_MAJOR@ = %{version}
 Requires:	glibc-devel
 Requires:	libstdc++-devel
 Requires:	boost-devel
-Requires:	libyui-devel
+Requires:	%{libyui-devel_version}
 Requires:	ncurses-devel
 
 URL:		@URL@
