--- a/libyui/CMakeLists.txt
+++ b/libyui/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
 
-INCLUDE( "${CMAKE_CURRENT_SOURCE_DIR}/PROJECTINFO.cmake" )
+INCLUDE( "${CMAKE_SOURCE_DIR}/PROJECTINFO.cmake" )
 
 SET( BUILDTOOLS_DIR "buildtools/" )
 
@@ -11,10 +11,10 @@ ENDIF( NOT PREFIX )
 IF( PLUGINNAME )
   SET( BUILDTOOLS_DIR "${PREFIX}/share/lib${BASELIB}/${BUILDTOOLS_DIR}" )
 ELSE( PLUGINNAME )
-  SET( BUILDTOOLS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${BUILDTOOLS_DIR}" )
+  SET( BUILDTOOLS_DIR "${CMAKE_SOURCE_DIR}/${BUILDTOOLS_DIR}" )
 ENDIF( PLUGINNAME )
 
-SET( CMAKE_MODULE_PATH "${BUILDTOOLS_DIR}" "${CMAKE_MODULE_PATH}" )
+SET( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules" "${BUILDTOOLS_DIR}" "${CMAKE_MODULE_PATH}" )
 
 INCLUDE( LibyuiCommon )
 INCLUDE( "${CMAKE_CURRENT_SOURCE_DIR}/VERSION.cmake" )
